Hoshi chunks to fix wrapping

--- a/scss/basho.scss
+++ b/scss/basho.scss
@@ -213,8 +213,12 @@
             border-spacing: 0;
             line-height: 2;
             margin: 0 auto;
-            --group-boundary-color: rgba(255, 255, 255, 0.5);
+            --group-boundary-color: transparent;
             --group-boundary-thickness: 10px;
+
+            tr {
+                background-clip: padding-box;
+            }
 
             .rank {
                 text-align: center;
@@ -241,10 +245,28 @@
                 }
 
                 &.hoshi {
-                    font-size: 0.5rem;
-                    font-family: monospace;
-                    width: 2ch;
-                    text-align: center;
+                    line-height: 0.6rem;
+                    text-align: left;
+
+                    > .chunk {
+                        white-space: nowrap;
+
+                        > span {
+                            display: inline-block;
+                            width: 0.6rem;
+                            height: 0.6rem;
+                            background-size: 100% 100%;
+                        }
+                        > .win {
+                            background-image: url(/static/img/hoshi-white.png);
+                        }
+                        > .loss {
+                            background-image: url(/static/img/hoshi-black.png);
+                        }
+                        > .blank {
+                            background-image: url(/static/img/hoshi-dash.png);
+                        }
+                    }
                 }
 
                 label {
@@ -316,35 +338,35 @@
             }
 
             .rank-group-1 {
-                background: hsla(26, 79%, 62%, 0.5);
+                background-color: hsla(26, 79%, 62%, 0.5);
                 
                 + .rank-group-2 > td {
                     border-top: solid var(--group-boundary-thickness) var(--group-boundary-color);
                 }
             }
             .rank-group-2 {
-                background: hsla(32, 88%, 68%, 0.5);
+                background-color: hsla(32, 88%, 68%, 0.5);
 
                 + .rank-group-3 > td {
                     border-top: solid var(--group-boundary-thickness) var(--group-boundary-color);
                 }
             }
             .rank-group-3 {
-                background: hsla(39, 85%, 72%, 0.5);
+                background-color: hsla(39, 85%, 72%, 0.5);
 
                 + .rank-group-4 > td {
                     border-top: solid var(--group-boundary-thickness) var(--group-boundary-color);
                 }
             }
             .rank-group-4 {
-                background: hsla(43, 78.5%, 80%, 0.5);
+                background-color: hsla(43, 78.5%, 80%, 0.5);
 
                 + .rank-group-5 > td {
                     border-top: solid var(--group-boundary-thickness) var(--group-boundary-color);
                 }
             }
             .rank-group-5 {
-                background: hsla(50, 73%, 88%, 0.5);
+                background-color: hsla(50, 73%, 88%, 0.5);
             }
         }
     }
